# frappe-appointment

./: .editorconfig  .eslintrc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  package.json  pyproject.toml
.github/workflows/: build-test.yml  linters.yml  vulnerable_dependency_check.yml
docs/: Use.md
frappe_appointment/: __init__.py  hooks.py  modules.txt  monkey_patch.py  patches.txt  uninstall.py
frappe_appointment/api/: group_meet.py  personal_meet.py  utils.py
frappe_appointment/constants/: __init__.py
frappe_appointment/fixtures/: custom_field.json  email_template.json  form_tour.json  property_setter.json
frappe_appointment/helpers/: email.py  google_calendar.py  ics_file.py  intervals.py  out_of_office.py  overrides.py  role.py  utils.py  zoom.py
frappe_appointment/overrides/: customize_form_override.py  event_override.py  google_calendar_override.py  leave_application_override.py  website_context.py
frappe_appointment/tasks/: import_email_templates.py  import_form_tour_google_calendar.py  reminder_google_calendar_auth.py  setup_email_template.py  setup_erpnext_fields.py  verify_availability.py
frappe_appointments/: hooks.py  patches.txt
frappe_appointments/constants/: __init__.py
frappe_appointments/helpers/: email.py  utils.py
frappe_appointments/overrides/: customize_form_override.py  event_override.py
frappe_scheduler/: hooks.py  modules.txt  patches.txt
frappe_scheduler/api/: group_meet.py  personal_meet.py  (+1 more)
frontend/: .env.sample  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+146 files in other folders)
