[project]
name = "frappe_appointment"
authors = [
    { name = "rtCamp", email = "sys@rtcamp.com"}
]
description = "The appointment scheduling app with team support in Frappe."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "ics~=0.7.2"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
